# zero2prod

./: .gitignore  Cargo.toml  configuration.yaml  flake.nix  links.md
.github/workflows/: ci.yml
dev/: lib.sh  shell-hook.sh  start-db.sh
migrations/: 20240916184042_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
