[package]
name = "zero2prod"
version = "0.1.0"
authors = [ "William Bezuidenhout <me@ignore.me>" ]
edition = "2021"

[lib]
path = "src/lib.rs"

# Double brackets means array in TOML.
# In rust you can have one library but multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
config = "0.14.0"
once_cell = "1.19.0"
reqwest = "0.12.7"
secrecy = { version = "0.10.2", features = ["serde"] }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.10.0" , features = [ "v4"] }
[dependencies.sqlx]
version="0.8.2"
default-features=false
features = [
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "runtime-tokio"
]
